# election-202602-shugiin

./: .gitignore  README.md  environment.yml  pyproject.toml  vercel.json
analysis/scripts/: plot_census_muni_map.py
data/master/: district_master.csv
data/processed/: adj_block.npz  adj_block_nodes.csv  adj_district.npz  adj_district_nodes.csv  adj_muni.npz  adj_muni_nodes.csv  adj_pref.npz  adj_pref_nodes.csv  census_district.csv  census_district_codebook.md  census_muni.csv  hirei_shikuchouson.csv
scripts/: build_names.py
scripts/download/: download_all.sh
scripts/process/: build_adjacency.py  build_geojson_layers.py  build_master_table.py  hirei_merge.py  hirei_to_json.py  muni_code_canonical.py  process_census_district.py  process_census_muni.py  process_election_data.py
scripts/workbench/: README.md  post-startup.sh
web/: .env.example  app.js  index.html  package.json  pnpm-lock.yaml  styles.css  vercel.json
web/data/: blocks.geojson  election_data.json
web/locales/: en.js  ja.js
web/modules/: colors.js  constants.js  controls.js  data.js  dom.js  format.js  i18n.js  legend.js  map.js  modal.js  mode-labels.js  modes.js  state.js  stats.js
web/public/data/: names_en.json  names_ja.json  parties.json
web/src/: App.tsx  main.tsx  types.ts
web/src/components/: ActionButtons.tsx  CompareTargetSelector.tsx  ControlPanel.tsx  DisplayToggles.tsx  GeoJsonLayer.tsx  GranularitySelector.tsx  LabelsManager.tsx  LegendPanel.tsx  MapView.tsx  MetricSelector.tsx  ModeSelector.tsx  PartySelector.tsx  PrefBorderLayer.tsx  RankSelector.tsx  StatsPanel.tsx  (+1 more)
(+146 files in other folders)
